Fixed row alignment an dmargins within config page

--- a/static/styles.css
+++ b/static/styles.css
@@ -12,3 +12,10 @@
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
+
+.row-special {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
